fixed portfolio project title alignment

--- a/www/index.css
+++ b/www/index.css
@@ -156,6 +156,7 @@ header {
 .portfolio-left-div {
     width: 50%;
     margin-right: 2.5%;
+    display: inline-block;
 }
 
 .portfolio-subtitle {
